para que los errores me den bien

--- a/covid.ipynb
+++ b/covid.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -287,21 +287,21 @@
        "179105    False\n",
        "179106    False\n",
        "179107    False\n",
-       "Name: user_favourites, Length: 179108, dtype: bool"
+       "Name: user_verified, Length: 179108, dtype: bool"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tweets[\"user_favourites\"].isna()"
+    "df_tweets[\"user_verified\"].isna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -310,38 +310,38 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tweets[\"user_favourites\"].isna().sum()"
+    "df_tweets[\"user_verified\"].isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], Name: user_favourites, dtype: int64)"
+       "Series([], Name: user_verified, dtype: bool)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tweets[\"user_favourites\"][df_tweets[\"user_favourites\"].isna()]"
+    "df_tweets[\"user_verified\"][df_tweets[\"user_verified\"].isna()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -368,6 +368,7 @@
        "      <th>user_favourites</th>\n",
        "      <th>user_followers</th>\n",
        "      <th>user_friends</th>\n",
+       "      <th>user_verified</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -376,33 +377,39 @@
        "      <td>40046</td>\n",
        "      <td>6749</td>\n",
        "      <td>5225</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1001</th>\n",
        "      <td>0</td>\n",
        "      <td>45</td>\n",
        "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1002</th>\n",
        "      <td>1982</td>\n",
        "      <td>464</td>\n",
        "      <td>410</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1003</th>\n",
        "      <td>16144</td>\n",
        "      <td>3936</td>\n",
        "      <td>4129</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1004</th>\n",
        "      <td>13913</td>\n",
        "      <td>1015</td>\n",
        "      <td>741</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -412,65 +419,70 @@
        "      <td>1654</td>\n",
        "      <td>35049</td>\n",
        "      <td>8505</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
        "      <td>17435</td>\n",
        "      <td>2471</td>\n",
        "      <td>624</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9997</th>\n",
        "      <td>257</td>\n",
        "      <td>337</td>\n",
        "      <td>164</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9998</th>\n",
        "      <td>19</td>\n",
        "      <td>686</td>\n",
        "      <td>7</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
        "      <td>155</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9000 rows × 3 columns</p>\n",
+       "<p>9000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      user_favourites  user_followers  user_friends\n",
-       "1000            40046            6749          5225\n",
-       "1001                0              45             1\n",
-       "1002             1982             464           410\n",
-       "1003            16144            3936          4129\n",
-       "1004            13913            1015           741\n",
-       "...               ...             ...           ...\n",
-       "9995             1654           35049          8505\n",
-       "9996            17435            2471           624\n",
-       "9997              257             337           164\n",
-       "9998               19             686             7\n",
-       "9999              155               3             0\n",
+       "      user_favourites  user_followers  user_friends  user_verified\n",
+       "1000            40046            6749          5225          False\n",
+       "1001                0              45             1          False\n",
+       "1002             1982             464           410          False\n",
+       "1003            16144            3936          4129          False\n",
+       "1004            13913            1015           741          False\n",
+       "...               ...             ...           ...            ...\n",
+       "9995             1654           35049          8505          False\n",
+       "9996            17435            2471           624          False\n",
+       "9997              257             337           164          False\n",
+       "9998               19             686             7          False\n",
+       "9999              155               3             0          False\n",
        "\n",
-       "[9000 rows x 3 columns]"
+       "[9000 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tweets[1000:10000][[\"user_favourites\", \"user_followers\", \"user_friends\"]]"
+    "df_tweets[1000:10000][[\"user_favourites\", \"user_followers\", \"user_friends\", \"user_verified\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +798,7 @@
        "[79970 rows x 13 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1125,7 @@
        "[79970 rows x 13 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1145,7 @@
        "99138"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1317,7 @@
        "4          ['COVID19', 'Recruiting']               Buffer       False  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1423,7 @@
        "max      2.435916e+07  497363.000000     2.047197e+06"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1456,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1484,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1515,7 @@
        "Name: user_name, Length: 53239, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1566,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,20 +1577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features:  ['user_followers', 'user_friends', 'user_verified', 'is_retweet']\n",
-      "Target:  user_favourites\n"
+      "Features:  ['user_followers', 'user_friends', 'user_favourites', 'is_retweet']\n",
+      "Target:  user_verified\n"
      ]
     }
    ],
    "source": [
-    "target = \"user_favourites\"\n",
+    "target = \"user_verified\"\n",
     "features = [x for x in df_covid2.columns if x != target]\n",
     "\n",
     "print (\"Features: \", features)\n",
@@ -1587,27 +1599,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        7254\n",
-       "1        1488\n",
-       "2         101\n",
-       "3        1287\n",
-       "4        3801\n",
-       "         ... \n",
-       "99133      38\n",
-       "99134     627\n",
-       "99135    1062\n",
-       "99136    7295\n",
-       "99137       0\n",
-       "Name: user_favourites, Length: 99138, dtype: int64"
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "         ...  \n",
+       "99133    False\n",
+       "99134    False\n",
+       "99135    False\n",
+       "99136    False\n",
+       "99137    False\n",
+       "Name: user_verified, Length: 99138, dtype: bool"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1639,7 @@
        "DecisionTreeRegressor(max_depth=14, random_state=42)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,18 +1654,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 11395.666546151726\n",
-      "Mean Absolute Percentage Error: 1.6068943419827593e+19\n",
-      "Mean Squared Error: 963657545.3947327\n",
-      "Root Mean Squared Error: 31042.834042573057\n",
-      "R^2 coefficient of determination: 0.5221377955454796\n"
+      "Mean Absolute Error: 0.051522814138772834\n",
+      "Mean Absolute Percentage Error: 1.160190632782284e+16\n",
+      "Mean Squared Error: 0.025761407069386427\n",
+      "Root Mean Squared Error: 0.16050360453705215\n",
+      "R^2 coefficient of determination: 0.8088387434206572\n"
      ]
     }
    ],
